--- a/_layouts/home_style.html
+++ b/_layouts/home_style.html
@@ -25,8 +25,8 @@
                         <div class="item active">
                             <img src="../assets/img/slider/slide2.jpg" height="400" alt="Image of first carousel">
                             <div class="carousel-caption">
-                                <h3 class="carousel-title hidden-xs">Office BOOTSTRAP TEMPLATE</h3>
-                                <p class="carousel-body">RESPONSIVE \ MULTI PAGE</p>
+                                <h3 class="carousel-title hidden-xs">Lead with Strategy. Lead with Confidence.</h3>
+                                <p class="carousel-body">At The Intersectional Business Academy, we empower leaders, entrepreneurs, and professionals to achieve success without sacrificing authenticity or balance.</p>
                             </div>
                         </div>
                         <!-- End Slide 1 -->
@@ -35,18 +35,18 @@
                         <div class="item">
                             <img src="../assets/img/slider/slide4.jpg" height="400" alt="Image of second carousel">
                             <div class="carousel-caption">
-                                <h3 class="carousel-title hidden-xs">EASY TO CUSTOMIZE</h3>
-                                <p class="carousel-body">BEAUTIFUL \ CLEAN \ MINIMAL</p>
+                                <h3 class="carousel-title hidden-xs">Education That Works in Real Life.</h3>
+                                <p class="carousel-body">Our programs combine business intelligence, emotional intelligence, and intersectional awareness to help you scale your career, your business, and your impact—while staying true to your values.</p>
                             </div>
                         </div>
                         <!-- End Slide 2 -->
 
                         <!-- Begin Slide 3 -->
                         <div class="item">
-                            <img src="../assets/img/slider/slide2.jpg" height="400" alt="Image of third carousel">
+                            <img src="../assets/img/slider/slide5.jpg" height="400" alt="Image of third carousel">
                             <div class="carousel-caption">
-                                <h3 class="carousel-title hidden-xs">MULTI-PURPOSE TEMPLATE</h3>
-                                <p class="carousel-body">PORTFOLIO \ CORPORATE \ CREATIVE</p>
+                                <h3 class="carousel-title hidden-xs">Because Success is Not Meant to Be Lonely.</h3>
+                                <p class="carousel-body">Join a vibrant community of leaders and change-makers. From masterminds and workshops to tailored coaching, we create safe and powerful spaces for growth, collaboration, and transformation.</p>
                             </div>
                         </div>
                         <!-- End Slide 3 -->
@@ -71,8 +71,8 @@
         <div class="container">
             <div class="row">
                 <div class="services-header">
-                    <h3 class="services-header-title">Our Mission</h3>
-                    <p class="services-header-body"><em> Things we provide in Office </em>  </p><hr>
+                    <h3 class="services-header-title">Unlock Your Leadership Potential</h3>
+                    <p class="services-header-body"><em> Start Your Journey </em>  </p><hr>
                 </div>
             </div>
       
@@ -81,8 +81,8 @@
                 <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
                     <div class="services-group wow animated fadeInLeft" data-wow-offset="40">
                         <p class="services-icon"><span class="fa fa-android fa-5x"></span></p>
-                        <h4 class="services-title">Android</h4>
-                        <p class="services-body">Cras interdum placerat libero vel tempor. Curabitur gravida iaculis erat quis dignissim.</p>
+                        <h4 class="services-title">Leadership Coaching</h4>
+                        <p class="services-body">One-on-one coaching tailored to help you strengthen your leadership style, embrace emotional intelligence, and make confident, values-based decisions that move your business forward.</p>
                         <p class="services-more"><a href="#">Find Out More</a></p>
                     </div>
                 </div>
@@ -90,8 +90,8 @@
                 <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
                     <div class="services-group wow animated zoomIn" data-wow-offset="40">
                         <p class="services-icon"><i class="fa fa-apple fa-5x"></i></p>
-                        <h4 class="services-title">Apple</h4>
-                        <p class="services-body">Cras interdum placerat libero vel tempor. Curabitur gravida iaculis erat quis dignissim.</p>
+                        <h4 class="services-title">Business Mastermind Groups</h4>
+                        <p class="services-body">Join curated mastermind circles where entrepreneurs and professionals exchange strategies, overcome challenges, and build accountability in a supportive, intersectional space.</p>
                         <p class="services-more"><a href="#">Find Out More</a></p>
                     </div>
                 </div>
@@ -99,8 +99,8 @@
                 <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
                     <div class="services-group wow animated fadeInRight" data-wow-offset="40">
                         <p class="services-icon"><i class="fa fa-thumbs-o-up fa-5x"></i></p>
-                        <h4 class="services-title">EASY TO USE</h4>
-                        <p class="services-body">Cras interdum placerat libero vel tempor. Curabitur gravida iaculis erat quis dignissim.</p>
+                        <h4 class="services-title">Strategic Growth Consulting</h4>
+                        <p class="services-body">Guidance for businesses navigating expansion, restructuring, or transformation—combining data-driven insights with ethical frameworks to achieve sustainable growth.</p>
                         <p class="services-more"><a href="#">Find Out More</a></p>
                     </div>        
                 </div>
@@ -112,8 +112,8 @@
                 <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
                     <div class="services-group wow animated fadeInLeft" data-wow-offset="40">
                         <p class="services-icon"><span class="fa fa-windows fa-5x"></span></p>
-                        <h4 class="services-title">Windows</h4>
-                        <p class="services-body">Cras interdum placerat libero vel tempor. Curabitur gravida iaculis erat quis dignissim.</p>
+                        <h4 class="services-title">Diversity, Equity & Inclusion Training</h4>
+                        <p class="services-body">Practical workshops and training programs that embed inclusive practices into organizations, creating cultures where diversity thrives and innovation follows.</p>
                         <p class="services-more"><a href="#">Find Out More</a></p>
                     </div>
                 </div>
@@ -121,8 +121,8 @@
                 <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
                     <div class="services-group wow animated zoomIn" data-wow-offset="40">
                         <p class="services-icon"><i class="fa fa-eye fa-5x"></i></p>
-                        <h4 class="services-title">RETINA READY</h4>
-                        <p class="services-body">Cras interdum placerat libero vel tempor. Curabitur gravida iaculis erat quis dignissim.</p>
+                        <h4 class="services-title">Educational Program Design</h4>
+                        <p class="services-body">Custom-designed curricula, workshops, and learning experiences for organizations seeking to upskill their teams and align learning with business goals.</p>
                         <p class="services-more"><a href="#">Find Out More</a></p>
                     </div>
                 </div>
@@ -130,8 +130,8 @@
                 <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
                     <div class="services-group wow animated fadeInRight" data-wow-offset="40">
                         <p class="services-icon"><i class="fa fa-cube fa-5x"></i></p>
-                        <h4 class="services-title">Cubic</h4>
-                        <p class="services-body">Cras interdum placerat libero vel tempor. Curabitur gravida iaculis erat quis dignissim.</p>
+                        <h4 class="services-title">Community Events & Networking</h4>
+                        <p class="services-body">Dynamic events that connect leaders, innovators, and entrepreneurs, fostering collaborations that extend beyond business into meaningful social impact.</p>
                         <p class="services-more"><a href="#">Find Out More</a></p>
                     </div>
                 </div>
