update footer copyright year, add courses and services pages

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -51,6 +51,6 @@
   </div>
 
   <div class="copyright text center">
-    <p>&copy; Copyright {{ site.time | date: '%Y' }}, <a href="#">LearnEQ.ca</a>.</p>
+    <p>&copy; Copyright {{ site.time | date: '%Y' }}, <a href="#">{{ site.title }}</a>.</p>
   </div>
 </footer>
