--- a/_includes/header.html
+++ b/_includes/header.html
@@ -22,10 +22,10 @@
         <a href="/about.html">About</a>
       </li>
       <li>
-        <a href="/services.html">Blog</a>
+        <a href="/services.html">Services</a>
       </li>
       <li>
-        <a href="/courses.html">Blog</a>
+        <a href="/courses.html">Courses</a>
       </li>
       <li>
         <a href="/team.html">Team</a>
