--- a/_includes/head.html
+++ b/_includes/head.html
@@ -20,5 +20,7 @@
   <link rel="stylesheet" href="../assets/bootstrap/css/bootstrap.css">
   <link rel="stylesheet" href="../assets/css/animate.min.css">
   <link rel="stylesheet" href="../assets/css/style.css">
-  <link rel="stylesheet" href="../assets/main.css">
+  <link rel="stylesheet" href="../assets/fontawesome/css/fontawesome.css" />
+  <link rel="stylesheet" href="../assets/fontawesome/css/brands.css"  />
+  <link rel="stylesheet" href="../assets/fontawesome/css/solid.css" />
 </head>
