--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -20,11 +20,11 @@
         <p><a href="/team"> Team ( Meet the Team )</a></p> 
       </div>
       <div class="col-md-4">
-        <h3><i class="fa fa-heart"></i> Socialize</h3>
+        <h3><i class="fa-solid fa-heart"></i> Socialize</h3>
         <div id="social-icons">
           {% if site.linkedin_link %}
             <a href="{{ site.linkedin_link }}" class="btn-group linkedin">
-              <i class="fa-brands fa-linkedin-square"></i>
+              <i class="fa-brands fa-square-linkedin"></i>
             </a>
           {% endif %}
 
