Update side-left background color to Dark Crimson

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -302,7 +302,7 @@ address {
   padding-top: 0px;
 }
 .side-left{
-  background:#89154d;
+  background:#791533;
   box-shadow: 3px grey;
   color: white;
   padding: 30px;
