--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -125,9 +125,7 @@ to
     margin-bottom: 20px;
 }
 .carousel-inner{
-  /* width:100%; */
-  right: 20%;
-  left: 20%;
+  width:100%;
   max-height: 500px !important;
 }
 .post-sidebar{
