--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -17,7 +17,7 @@
         <p><a href="/services"> Services ( What we do )</a></p>
         <p><a href="/contact"> Contact ( Feel free to contact )</a></p>
         <p><a href="/courses"> Courses ( Currently on offer )</a></p>
-        <p><a href="/team"> Team ( Meet the Team )</a></p> 
+        <!-- <p><a href="/team"> Team ( Meet the Team )</a></p>  -->
       </div>
       <div class="col-md-4">
         <h3><i class="fa-solid fa-heart"></i> Socialize</h3>
