--- a/_includes/header.html
+++ b/_includes/header.html
@@ -16,7 +16,7 @@
   <div id="navbar-spy" class="collapse navbar-collapse navbar-responsive-collapse">
     <ul class="nav navbar-nav pull-right">
       <li class="active">
-        <a href="/">Home</a>
+        <a href="/">The Intersectional Business Academy</a>
       </li>
       <li>
         <a href="/about.html">About</a>
